# service-layer-rs

./: .gitignore  Cargo.toml  README.md
example/: Cargo.toml
example/src/: log_svc.rs  main.rs  test_layer.rs  test_map_layer.rs  test_service.rs  test_service_fn.rs
src/: lib.rs  service.rs  service_fn.rs  util.rs
